Update CLM sections for RHEL9 (#2007)
* Update CLM sections for RHEL9

* fixup! Update CLM sections for RHEL9

* Update modules/administration/pages/content-lifecycle.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -239,6 +239,11 @@ You can add multiple filters to select multiple module streams.
 If you do not use an AppStream filter in your CLM project, the module metadata in the modular sources remains intact, and the target repositories contain the same module metadata.
 As long as at least one AppStream filter is enabled in the CLM project, all target repositories are transformed into regular repositories.
 
+In some cases, you might wish to build regular repositories without having to include packages from any module.
+To do so, add an AppStream filter using the matcher [parameter]``none (disable modularity)``.
+This will disable all the modules in the target repository.
+This is especially useful for {rhel}{nbsp}9 clients, where the default versions of most modules are already included in the AppStream repository as regular packages.
+
 To use the AppStream filter, you need a CLM project with a modular repository such as ``{rhel} AppStream``.
 Ensure that you included the module you need as a source before you begin.
 
@@ -251,6 +256,7 @@ Ensure that you included the module you need as a source before you begin.
 +
 * In the [guimenu]``Filter Name`` field, type a name for the new filter.
 * In the [guimenu]``Filter Type`` field, select [parameter]``Module (Stream)``.
+* In the [guimenu]``Matcher`` field, select [parameter]``equals``.
 * In the [guimenu]``Module Name`` field, type a module name.
     For example, [parameter]``postgresql``.
 * In the [guimenu]``Stream`` field, type the name of the desired stream.
@@ -270,6 +276,7 @@ You can use the browse function in the ``Create/Edit Filter`` form to select a m
 +
 * In the [guimenu]``Filter Name`` field, type a name for the new filter.
 * In the [guimenu]``Filter Type`` field, select [parameter]``Module (Stream)``.
+* In the [guimenu]``Matcher`` field, select [parameter]``equals``.
 . Click ``Browse available modules`` to see all modular channels.
 . Select a channel to browse the modules and streams:
 +
@@ -294,7 +301,26 @@ For example, selecting two streams from the same module is
 invalid.
 ====
 
+.Procedure: Disabling Modularity
+. In the {productname} {webui}, navigate to your {rhel}{nbsp}9 CLM project.
+    Ensure that you have included the AppStream channels for your project.
+. Click btn:``Create Filter`` and use these parameters:
++
+* In the [guimenu]``Filter Name`` field, type a name for the new filter.
+* In the [guimenu]``Filter Type`` field, select [parameter]``Module (Stream)``.
+* In the [guimenu]``Matcher`` field, select [parameter]``none (disable modularity)``.
+. Click btn:[Save] to create the new filter.
+. Navigate to menu:Content Lifecycle[Projects] and select your project.
+. Click btn:``Attach/Detach Filters``, select your new AppStream filter, and click btn:[Save].
+
+This will effectively remove the module metadata from the target repository, excluding any package that belongs to a module.
+
 When you build your CLM project using the btn:[Build] button in the {webui}, the target repository is a regular repository without any modules, that contains packages from the selected module streams.
+
+[NOTE]
+====
+Disabling modularity altogether in {rhel}{nbsp}8 projects might result in a faulty environment as some modules are essential for healthy operation in {rhel}{nbsp}8.
+====
 
 // This feature is mandatory to make RHEL/CentOS 8 modular repositories work
 // in the SUMA UI. Otherwise, even though modular repositories can be synced
