--- a/README.adoc
+++ b/README.adoc
@@ -51,8 +51,9 @@ image:https://github.com/uyuni-project/uyuni-docs/workflows/build_test_deploy_uy
 image:https://github.com/uyuni-project/uyuni-docs/workflows/feature_tests_uyuni/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
 
 === Syntax and Files
-image:https://github.com/uyuni-project/uyuni-docs/workflows/Linting/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-image:https://github.com/uyuni-project/uyuni-docs/workflows/Find%20unused%20files/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/Linting/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/vale_tests.yml"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/Find%20unused%20files/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/find_unused.yml"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/Enforced%20checkstyle/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/enforcing_checkstyle.yml"]
 
 === Weblate Translations
 image:https://github.com/uyuni-project/uyuni-docs/workflows/UPDATE%20TRANSLATION%20FILES/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
