--- a/README.adoc
+++ b/README.adoc
@@ -47,8 +47,8 @@ endif::[]
 == Test Status
 
 === HTML
-image:https://github.com/uyuni-project/uyuni-docs/workflows/build_test_deploy_uyuni/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs", 'Build Test Deploy']
-image:https://github.com/uyuni-project/uyuni-docs/workflows/feature_tests_uyuni/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/build_test_deploy_uyuni/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/main_uyuni.yml"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/feature_tests_uyuni/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/feature_tests_uyuni.yml"]
 
 === Syntax and Files
 image:https://github.com/uyuni-project/uyuni-docs/workflows/Linting/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/vale_tests.yml"]
