--- a/README.adoc
+++ b/README.adoc
@@ -56,7 +56,7 @@ image:https://github.com/uyuni-project/uyuni-docs/workflows/Find%20unused%20file
 image:https://github.com/uyuni-project/uyuni-docs/workflows/Enforced%20checkstyle/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/enforcing_checkstyle.yml"]
 
 === Weblate Translations
-image:https://github.com/uyuni-project/uyuni-docs/workflows/UPDATE%20TRANSLATION%20FILES/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/UPDATE%20TRANSLATION%20FILES/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/update_gettext.yml"]
 
 === PDF Translations
 //Translation Test badges
