--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -199,11 +199,12 @@ This section guides you through {productname} setup using [command]``mgr-setup``
 
 .Procedure : Configuring server with external database
 
-First create a [path]``setup_env.sh`` file in the [path]``/root`` directory defining the server setup like this:
+. First create a [path]``setup_env.sh`` file in the [path]``/root`` directory defining the server setup.
+  The details are explained in the following steps.
 
 
-. Here you define your certificate information and password.
-The information are the same as <<proc-quickstart-certificate-information-yast>>.
+. Set the variables defining your certificate information and password.
+The information is the same as explained at <<proc-quickstart-certificate-information-yast>>.
 +
 ----
 CERT_O="SUSE"
@@ -231,7 +232,7 @@ MANAGER_DB_PROTOCOL="TCP"
 MANAGER_ENABLE_TFTP="Y"
 ----
 
-. Define the specific configuration for the external database.
+. Set the variables defining the specific configuration for the external database.
   In this scenario, an RDS database has been deployed and is accessible by the server.
   To establish a connection, an AWS certificate is also required.
   [literal]``EXTERNALDB_ADMIN_USER`` and [literal]``EXTERNALDB_ADMIN_PASS`` are the credentials set during the RDS deployment:
