--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -111,7 +111,9 @@ In this file it is possible to modify the tag to use for the container images:
 
 === Using a custom container image for a service
 
-By default, the {productname} Proxy suite is set to use the same image version and registry path for each of its services. However, there's a possibility to change this behavior by overriding the default values for a specific service. The [literal]``uyuni-proxy`` CLI bundled with the package, has an [literal]``update image`` command taking the following arguments:
+By default, the {productname} Proxy suite is set to use the same image version and registry path for each of its services.
+However, it is possible to override the default values for a specific service.
+The [literal]``uyuni-proxy`` CLI bundled with the package, has an [literal]``update image`` command  with the following parameters:
 
 - [literal]``-s`` for the service name
 - [literal]``-t`` for the version tag
