--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -119,7 +119,8 @@ The [literal]``uyuni-proxy`` CLI bundled with the package, has an [literal]``upd
 - [literal]``-t`` for the version tag
 - [literal]``-r`` for the registry path
 
-An example usage would look like this:
+For example, use it like this:
+
 ----
 uyuni-proxy update image -s httpd -t 0.1.0 -r registry.opensuse.org/uyuni
 ----
