--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -126,7 +126,8 @@ uyuni-proxy update image -s httpd -t 0.1.0 -r registry.opensuse.org/uyuni
 ----
 It would adjust a configuration file for the httpd service, taking [path]``registry.opensuse.org/uyuni`` as the registry and [literal]``0.1.0`` as the version tag and then restart it.
 
-To reset the values to defaults, run the proxy reset command, specifying the service with the -s flag. An example usage would look like the following:
+To reset the values to defaults, run the proxy reset command, specifying the service with the [literal]``-s`` parameter.
+For example, use it like this:
 
 ----
 uyuni-proxy reset -s httpd
