--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -133,7 +133,7 @@ For example, use it like this:
 uyuni-proxy reset -s httpd
 ----
 
-This command would reset the configuration of the [literal]``httpd`` service to the global defaults and restarts it.
+This command would reset the configuration of the [literal]``httpd`` service to the global defaults and then restart it.
 
 See the [literal]``uyuni-proxy --help`` for more detail.
 
