--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -135,7 +135,7 @@ uyuni-proxy reset -s httpd
 
 This command would reset the configuration of the [literal]``httpd`` service to the global defaults and then restart it.
 
-See the [literal]``uyuni-proxy --help`` for more detail.
+For more information, see the [literal]``uyuni-proxy --help``.
 
 [[installation-proxy-containers-firewall-rules]]
 == Allow network access for provided services on container host firewall
