Update Saltboot image and review fixes

--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -16,7 +16,7 @@ Containerized {productname} {smr} environment does not use {productname} {smr} B
 
 [IMPORTANT]
 ====
-Containerized workflow requires rebuild of PXE images using {productname} Server 4.3 or newer.
+Containerized workflow requires POS images build using {productname} Server 4.3 or newer.
 Older images will not work.
 ====
 
@@ -31,14 +31,14 @@ See below for example.
 
 == Saltboot group
 
-Containerized {productname} {smr} is configured in [systemitem]``Saltboot Groups``.
+Containerized {productname} {smr} is configured in [systemitem]``Saltboot Group``.
 Saltboot Groups are regular server groups with [systemitem]``Saltboot Group`` formula enabled.
 
 Saltboot Groups acts as a branch groups.
 
 image::saltboot_group.png[scaledwidth=80%]
 
-[systemitem]``Saltboot group`` formula is a successor of [systemitem]``Branch Network formula``, [systemitem]``PXE formula`` and [systemitem]``TFTP formula`` used in regular {productname} {smr} setups.
+[systemitem]``Saltboot Group`` formula is a successor of [systemitem]``Branch Network formula``, [systemitem]``PXE formula`` and [systemitem]``TFTP formula`` used in regular {productname} {smr} setups.
 
 Name of the [systemitem]``Saltboot group`` is automatically used as a [systemitem]``branch id``, an identifier for group of machines booted through particular containerized {productname} Proxy.
 
@@ -68,22 +68,21 @@ See xref:retail-terminal-names.adoc[] for explanation of possible configurations
 
 == Comparing containerized and non-containerized workflows
 
-[IMPORTANT]
-====
-Containerized retail workflow no longer manages DHCP server.
-External DHCP service must be used.
-====
+External DHCP service must be used with containerized Saltboot.
 
 Containerized workflow relies on updated image building in {productname} Server 4.3 where PXE images are no longer collected as bundle, but kernel, initrd and filesystem image are collected individually.
 
-Containerized workflow uses new TFTP container which instead of providing files present on the proxy, routes specific TFTP requests as HTTP requests through proxy local squid proxy to {productname} Server.
+Containerized workflow uses new TFTP container which instead of providing files present on the proxy, routes specific TFTP requests as HTTP requests through local squid proxy to {productname} Server.
 
 Containerized proxy is not a Salt client, it is not possible to call [systemitem]``image-sync`` state.
 
-Thanks to these improvements and not present Satl client, after image is build it is immediately available to the Saltboot clients.
+[IMPORTANT]
+====
+Once POS image is build and made available on {productname} Server, it is immediately available to the Saltboot clients as well.
 This may have implications on how images are deployed to production.
+====
 
-The following sections difference between containerized and regular workflow.
+The following sections differentiate between containerized and regular workflow.
 Both are assuming proxy (containerized or in form of {productname} {smr} Branch Server) are available.
 
 Containerized workflow:
