--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -73,7 +73,7 @@ You will need to clone the repository locally to use it for building.
 
 Before you configure the branch server, ensure you have decided on networking topology and you choose [systemitem]``branch id``.
 
-For the information about the possible network topologies, see xref:retail:retail-network-arch.adoc[].
+For information about the possible network topologies, see xref:retail:retail-network-arch.adoc[].
 
 As a [systemitem]``branch id`` select any alphanumerical string.
 
@@ -130,7 +130,7 @@ For more information about installing Ansible, see xref:administration:ansible-i
 == Configure Services for Saltboot
 
 Saltboot technology is used to deploy POS images to the terminals.
-Saltboot consists of saltboot enabled initrd (build as part of POS images) and saltboot salt states.
+Saltboot consists of saltboot enabled initrd (build as part of POS images) and saltboot Salt states.
 
 This section covers general information about generic Saltboot requirements.
 For configuration examples, see xref:retail:example-configurations.adoc[].
@@ -200,7 +200,7 @@ Value obtained by download server discovery is then used together with POS image
 
 Last piece for Saltboot is to provide partitioning for terminal.
 This is done individually for each hardware type of terminals.
-For more information about hardware types, see xref:retail:retail-deploy-terminals.adoc[]
+For more information about hardware types, see xref:retail:retail-deploy-terminals.adoc[].
 
 Above mentioned steps are mandatory minimum for successful Saltboot deployment.
 For configuration examples, see xref:retail:example-configurations.adoc[].
