Include RHEL7 in Salt 3000 to Salt Bundle migration guide

--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -397,7 +397,7 @@ Increasing this value will cause {productname} Server to take longer to check if
 == Salt 3000 to Salt Bundle Migration
 
 
-=== Switch {sles} 12 or {centos} 7 minions (Salt 3000 EOL) to Salt Bundle.
+=== Switch {sles} 12, {rhel} 7 or {centos} 7 minions (Salt 3000 EOL) to Salt Bundle.
 
 .Procedure: Switching with [literal]``util.mgr_switch_to_venv_minion`` state to [package]``venv-salt-minion``
 
@@ -416,7 +416,7 @@ salt <minion_id> state.apply util.mgr_switch_to_venv_minion
 salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{"mgr_purge_non_venv_salt_files": True, "mgr_purge_non_venv_salt": True}'
 ----
 
-=== Switch {sles} 12 or {centos} 7 SSH minions (Salt 3000 EOL) to Salt Bundle.
+=== Switch {sles} 12, {rhel} 7 or {centos} 7 SSH minions (Salt 3000 EOL) to Salt Bundle.
 
 .Procedure: Enabling the Salt Bundle with Salt SSH support
 
