Small cosmetic fix to troubleshooting guide
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -397,7 +397,7 @@ Increasing this value will cause {productname} Server to take longer to check if
 == Salt 3000 to Salt Bundle Migration
 
 
-=== Switch {sles} 12, {rhel} 7 or {centos} 7 minions (Salt 3000 EOL) to Salt Bundle.
+=== Switch {sles} 12, {rhel} 7, or {centos} 7 minions (Salt 3000 EOL) to Salt Bundle
 
 .Procedure: Switching with [literal]``util.mgr_switch_to_venv_minion`` state to [package]``venv-salt-minion``
 
