updated support status sle-micro

--- a/modules/client-configuration/pages/supported-features-sle-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sle-micro.adoc
@@ -72,7 +72,7 @@ The icons in this table indicate:
 | {salt}
 
 | Product migration
-| {question}
+| {cross}
 | {salt}
 
 | Basic Virtual Guest Management {star}
@@ -108,8 +108,8 @@ The icons in this table indicate:
 | {salt}
 
 | Action chains
-| {question}
-| {question}
+| {salt}
+| {salt}
 
 | Staging (pre-download of packages)
 | {question}
