replace standard with stig https://github.com/SUSE/spacewalk/issues/20285 https://github.com/uyuni-project/uyuni-docs/issues/2017

--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -179,14 +179,14 @@ You can also use the {productname} API to schedule regular scans.
   For example:
 ----
   Command: /usr/bin/oscap xccdf eval
-  Command-line arguments: --profile xccdf_org.ssgproject.content_profile_standard
+  Command-line arguments: --profile xccdf_org.ssgproject.content_profile_stig
   Path to XCCDF document: /usr/share/xml/scap/ssg/content/ssg-sle15-ds-1.2.xml
 ----
 
 . The scan runs at the client's next scheduled synchronization.
 
 
-[[IMPORTANT]]
+[IMPORTANT]
 ====
 The XCCDF content file is validated before it is run on the remote system.
 If the content file includes invalid arguments, the test fails.
@@ -287,7 +287,7 @@ Run the Bash script as a remote command on single systems.
 ----
 #!/bin/bash
 chmod +x -R /usr/share/scap-security-guide/bash
-/usr/share/scap-security-guide/bash/sle15-script-standard.sh
+/usr/share/scap-security-guide/bash/sle15-script-stig.sh
 ----
 
 . Click btn:[Schedule].
@@ -311,7 +311,7 @@ Run the Bash script as a remote command on multiple systems at once.
 ----
 #!/bin/bash
 chmod +x -R /usr/share/scap-security-guide/bash
-/usr/share/scap-security-guide/bash/sle15-script-standard.sh
+/usr/share/scap-security-guide/bash/sle15-script-stig.sh
 ----
 
 . Click btn:[Schedule].
