Reviewing and reducing admonitions, Ansible file(s).

--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -1,18 +1,15 @@
 [[ansible-integration]]
 = Ansible integration
 
-[NOTE]
+[IMPORTANT]
 ====
 This feature is a technology preview.
 ====
 
-[NOTE]
-====
 Currently, the supported version of Ansible is 2.9 (LTS) shipped in SUSE Linux Enterprise 15 Client Tools channels.
 The supported OS version for the Ansible Control Node is SLES 15 SP3, or later.
 Ansible software is also available for {productname} Proxy and {productname} {smr} Branch Server.
 For Control Nodes running operating systems other than SUSE Linux Enterprise, use Ansible shipped together with your distribution.
-====
 
 
 
