Reviewing and reducing admonitions, live patching SLES 15 file(s).

--- a/modules/administration/pages/live-patching-sles15.adoc
+++ b/modules/administration/pages/live-patching-sles15.adoc
@@ -41,16 +41,11 @@ image::live_patching_criticalupdates.png[scaledwidth=80%]
 
 [IMPORTANT]
 ====
-Not all kernel patches are Live Patches.
-Non-Live kernel patches are represented by a `Reboot Required` icon located next to the `Security` shield icon.
-These patches always require a reboot.
-====
-
-
-[IMPORTANT]
-====
-Not all security issues can be fixed by applying a live patch.
-Some security issues can only be fixed by applying a full kernel update and requires a reboot.
-The assigned CVE numbers for these issues are not included in live patches.
-A CVE audit displays this requirement.
+. Not all kernel patches are Live Patches.
+  Non-Live kernel patches are represented by a `Reboot Required` icon located next to the `Security` shield icon.
+  These patches always require a reboot.
+. Not all security issues can be fixed by applying a live patch.
+  Some security issues can only be fixed by applying a full kernel update and requires a reboot.
+  The assigned CVE numbers for these issues are not included in live patches.
+  A CVE audit displays this requirement.
 ====
