Minor formatting fix.

--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -53,7 +53,7 @@ It opens an SSH connection and can run commands on that machine.
 
 [IMPORTANT]
 ====
-When using remote-exec provisioner to register clients, the user must ensure that the machine running Terraform will have access to the new virtual machine after its creation.
+When using [literal]``remote-exec`` provisioner to register clients, the user must ensure that the machine running Terraform will have access to the new virtual machine after its creation.
 ====
 
 The remaining requirements are the same as when using <<cloud-init-based-client-registration>> 
