Minor formatting fix.

--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -70,7 +70,7 @@ If you use a combined key with a Salt client, only the first key is used.
 
 You can specify multiple activation keys at the command prompt, or in a single autoinstallation profile.
 
-At the command prompt on the {productname} Server, use the [command]``rhnreg_ks` command, and separate the key names with a comma.
+At the command prompt on the {productname} Server, use the [command]``rhnreg_ks`` command, and separate the key names with a comma.
 To specify multiple keys in a {kickstart} profile, navigate to menu:Systems[Autoinstallation] and edit the profile you want to use.
 
 Be careful when combining activation keys, as conflicts between some values could cause client registration to fail.
