Moved admonition to a more logical place.

--- a/modules/client-configuration/pages/autoinst-owngpgkey.adoc
+++ b/modules/client-configuration/pages/autoinst-owngpgkey.adoc
@@ -5,7 +5,10 @@ If the repositories you are using for autoinstallation have unsigned metadata, y
 
 A safer alternative is to provide your own GPG key.
 
-
+[NOTE]
+====
+This technique applies to {suse} clients only.
+====
 
 .Procedure: Include your own GPG key
 . Create a GPG key.
@@ -15,11 +18,6 @@ A safer alternative is to provide your own GPG key.
 * For information on how to create the key and sign the metadata with it, see xref:administration:repo-metadata.adoc[Signing Repository Metadata].
 * For information on how to add the key to installation media used for network boot, see xref:client-configuration:autoinst-owngpgkey.adoc#gpg-key-pxeboot[Own GPG Key for PXE Boot].
 * For information on how to add the key to installation media used for a boot from CD-ROM, see xref:client-configuration:autoinst-owngpgkey.adoc#gpg-key-cdrom[Own GPG Key in a CD-ROM].
-
-[NOTE]
-====
-This technique applies only to {suse} clients.
-====
 
 [NOTE]
 ====
