Fixed incorrect formatting.

--- a/modules/client-configuration/pages/autoinst-pxeboot.adoc
+++ b/modules/client-configuration/pages/autoinst-pxeboot.adoc
@@ -85,7 +85,7 @@ Alternatively, if your DHCP server is registered at {productname}, you can confi
 
 [NOTE]
 ====
-If you use Secure Boot, type [path]``grub/shim.efi instead of [path]``grub/grub.efi`` in the [guimenu]``Filename EFI`` field.
+If you use Secure Boot, type [path]``grub/shim.efi`` instead of [path]``grub/grub.efi`` in the [guimenu]``Filename EFI`` field.
 ====
 
 This sets up a global PXE server for all the hosts, you can also have per-host settings.
