Converted admonition to plain text in the unnumbered list.

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -40,18 +40,13 @@ Ensure you have a working system backup available, in case of an emergency.
 
 == Perform a Migration
 
-Before starting the product migration, ensure there are no pending updates or patches.
-Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
-If your client system is not uptodate, product migration may fail.
+Before starting the product migration:
 
-
-
-[NOTE]
-====
-Before starting a migration, make sure all the channels of the target product are fully synchronized.
-To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
-====
-
+* Ensure there are no pending updates or patches.
+  Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
+  If your client system is not uptodate, product migration may fail.
+* Make sure all the channels of the target product are fully synchronized.
+  To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
 
 
 .Procedure: Performing a Migration
@@ -157,10 +152,10 @@ Any systems that you are not intending to upgrade at this time, should be remove
 
 [IMPORTANT]
 ====
-The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` abd [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
+The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` and [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
 If there are 100 systems in the group, you will see 100 actions scheduled.
 It is important that all systems in the group support the same "migration target."
-+
+
 You will get the targets for all the systems in the group, when you run:
 +
 ----
