--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -73,7 +73,7 @@ If you want to migrate a large number of clients to the next SP version, you can
 
 [WARNING]
 ====
-The product mas migration operation is dangerous.
+The product mass migration operation is dangerous.
 Be careful not to upgrade systems unintentionally.
 The process should be tested thoroughly.
 At least, do a dry-run first.
