Replaced two with one admonition.

--- a/modules/client-configuration/pages/system-types.adoc
+++ b/modules/client-configuration/pages/system-types.adoc
@@ -14,18 +14,24 @@ Check the clients you want to change the add-on system type for, select the [gui
 
 You can also change the base system type from ``Management`` to ``Salt``, by re-registering the client.
 
-
-
-== Change a Traditional Client to Salt Using the {webui}
-
-The simplest method to change a traditional client to a Salt client is to re-register it with the {webui}.
-
 [WARNING]
 ====
 Changing the base system type requires that you re-register your client.
 This deletes any customization or configuration on the client, however event history is preserved.
 It also requires client downtime.
 ====
+
+
+== Change a Traditional Client to Salt Using the {webui}
+
+The simplest method to change a traditional client to a Salt client is to re-register it with the {webui}.
+
+//[WARNING]
+//====
+//Changing the base system type requires that you re-register your client.
+//This deletes any customization or configuration on the client, however event history is preserved.
+//It also requires client downtime.
+//====
 
 
 // Not tested --LKB 2020-09-22
@@ -46,12 +52,12 @@ You can use the command prompt to re-register a traditional client as a Salt cli
 This requires you to delete the packages used by the traditional client.
 You can then re-register the client using your preferred registration method for Salt clients.
 
-[WARNING]
-====
-Changing the base system type requires that you re-register your client.
-This deletes any customization or configuration on the client.
-It also requires client downtime.
-====
+//[WARNING]
+//====
+//Changing the base system type requires that you re-register your client.
+//This deletes any customization or configuration on the client.
+//It also requires client downtime.
+//====
 
 
 // Not tested --LKB 2020-09-22
