--- a/modules/client-configuration/pages/contact-methods-pushssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-pushssh.adoc
@@ -17,7 +17,7 @@ For Salt clients, use Push via Salt SSH.
 
 [IMPORTANT]
 ====
-Re-installing systems using the provisioning model is not currently supported on clients managed with push via SSH.
+Re-installing systems using the provisioning model is not currently supported on clients managed with Push via SSH.
 ====
 
 
