Uppercase for BYPS correction.

--- a/modules/client-configuration/pages/virtualization.adoc
+++ b/modules/client-configuration/pages/virtualization.adoc
@@ -96,7 +96,7 @@ In this case, check your subscription carefully.
 
 [NOTE]
 ====
-For BYOS instances (bring your own subscription), all installed products are passed to the subscription matcher.
+For BYOS instances (Bring Your Own Subscription), all installed products are passed to the subscription matcher.
 If your public cloud instances are PAYG (pay as you go), their base products are excluded from the subscription matcher counting.
 
 The calculation about whether an instance is PAYG or BYOS is done at the time of registration or when a hardware refresh action is executed.
