--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -2,7 +2,6 @@
 = Image Building and Management
 
 
-
 [[at.images.overview]]
 == Image Building Overview
 
@@ -68,7 +67,7 @@ The operating system on the build host must match the operating system on the ta
 For example, build {sles}{nbsp}15 based images on a build host running {sles}{nbsp}15 (SP2 or later) OS version.
 Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP4 or {sles}{nbsp}12 SP3 OS version.
 
-Cross-architecture builds are unsupported.
+Cross-architecture builds are not supported.
 ////
 2022-05-12, ke: at least for now, according to feedback, this is unsupported:
 For example, you must build Raspberry Pi {sles}{nbsp}15 SP3 images on a Raspberry Pi (aarch64 architecture) build host running {sles}{nbsp}15 SP3.
