Monitoring admonitions cleanup.

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -99,7 +99,7 @@ The Prometheus software is also available for {productname} Proxy and {productna
 ====
 Prometheus expects POSIX filesystem for storing data.
 Non-POSIX compliant filesystems are not supported.
-NFS filesystems are explicitly not supported.
+NFS filesystems are not supported.
 ====
 
 .Procedure: Installing Prometheus Using the {webui}
@@ -219,8 +219,6 @@ Grafana is not available on {productname} Proxy.
 You can choose which dashboards to provision in the formula configuration page.
 ====
 
-For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
-
 
 .Procedure: Manually Installing Grafana
 
@@ -254,9 +252,10 @@ image::grafana_sidemenu_datasource.png[scaledwidth=40%]
 +
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
-For more information on how to manually install and configure Grafana, see https://grafana.com/docs.
 
-For more information about the monitoring formulas with forms, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
+For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
+
+For more information on how to manually install and configure Grafana, see https://grafana.com/docs.
 
 
 
