--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -188,7 +188,7 @@ scrape_configs:
 systemctl restart prometheus
 ----
 
-For more information about the Prometheus configuration options, see the official Prometheus documentation at https://prometheus.io/docs/prometheus/latest/configuration/configuration/
+For more information about the Prometheus configuration options, see the official Prometheus documentation at https://prometheus.io/docs/prometheus/latest/configuration/configuration/.
 
 
 
@@ -310,7 +310,7 @@ Metrics for a proxy are not automatically collected by Prometheus.
 To enable self-health monitoring on a proxy, you need to manually install exporters and enable them.
 ====
 
-Following relevant metrics are collected on the {productname} Server.
+The following relevant metrics are collected on the {productname} Server.
 
 .PostgreSQL exporter (port 9187)
 [cols="45,10,45"]
