--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -15,7 +15,7 @@ To setup an Ansible control node, execute the following steps from the {productn
 
 [NOTE]
 ====
-The {productname} client tools contains the Ansible package.
+The {productname} client tools contain the Ansible package.
 ====
 
 . From the menu:System[Overview] page, select your client.
