--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -238,6 +238,6 @@ You can also track the action, in this case the dry run, in the {webui} for a gi
 From the system details page of the client, Navigate to menu:Events[History].
 If there are any failures during the dry run, the system should be investigated.
 
-If all is well, the [literal]``"-d"`` option can be removed from the command to run the real migration.
+If all is well, the [literal]``-d`` option can be removed from the command to run the real migration.
 After the migration is complete, you can reboot the system from the {productname} {webui}.
 
