--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -85,9 +85,10 @@ The Python 3 deployed with the Bundle is used to handle Salt SSH session on the 
 
 [IMPORTANT]
 ====
-The bootstrap repository must be created before bootstrapping the client with {webui}. Salt SSH is using the Salt Bundle taken from the bootstrap repository based on the detected target operating system.
+The bootstrap repository must be created before bootstrapping the client with {webui}.
+Salt SSH is using the Salt Bundle taken from the bootstrap repository based on the detected target operating system.
 
-For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository]
+For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[].
 ====
 
 [IMPORTANT]
